@@ -1,13 +1,24 @@
+-- --------------------------------------------------------
+-- Xoops Instant Messenger (xim)
+-- Compatability (Mysql 5 & 4)
+-- --------------------------------------------------------
+
+-- 
+-- Struktur-dump for tabellen `xoops_xim_chat`
+--
 CREATE TABLE `xim_chat` (
-  `id` INTEGER UNSIGNED NOT NULL AUTO_INCREMENT,
+  `id` int(10) unsigned NOT NULL auto_increment,
   `from` mediumint(8) unsigned NOT NULL,
   `to` mediumint(8) unsigned NOT NULL,
-  `message` TEXT NOT NULL,
-  `sent` DATETIME NOT NULL DEFAULT '0000-00-00 00:00:00',
-  `recd` INTEGER UNSIGNED NOT NULL DEFAULT 0,
-  PRIMARY KEY (`id`)
-)ENGINE = InnoDB;
+  `message` text NOT NULL,
+  `sent` datetime NOT NULL default '0000-00-00 00:00:00',
+  `recd` int(10) unsigned NOT NULL default '0',
+  PRIMARY KEY  (`id`)
+) TYPE=MyISAM DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;
 
+-- 
+-- Struktur-dump for tabellen `xoops_xim_pers_conf`
+-- 
 CREATE TABLE `xim_pers_conf` (
   `id` int(1) unsigned NOT NULL auto_increment,
   `username` text NOT NULL,
