@@ -8,8 +8,8 @@ DONE: Show avatar in chat							(Andrax)
 DONE: Add sounds to chat							(Culex)
 DONE: Add status display + configs					(Culex)
 DONE: Create footerbar like facebook 				(Andrax)
+DONE: " im" is replaced by "" in chats, jquery rn ?	(Culex)
 
-TODO: " im" is replaced by "" in chats, jquery rn ?	(?? 0%	done)
 TODO: Mysql 4 & 5 compat. sql file					(?? 0%	done)
 TODO: Create buddylist 								(?? 0%  done)
 TODO: Send file through chat 						(?? 0%  done)
